--- a/abito-app/src/index.css
+++ b/abito-app/src/index.css
@@ -29,38 +29,6 @@ body {
     color: #fff;
 }
 
-.header {
-    padding-top: 30px;
-    padding-bottom: 24px;
-}
-
-.header-box {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.header-logo {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    text-decoration: none;
-}
-
-.header-logo span {
-    line-height: 28px;
-    font-size: 24px;
-    font-weight: 700;
-    margin-left: 6px;
-    color: #0A143A;
-}
-
-.header-burger {
-    width: 30px;
-    height: 19px;
-    display: none;
-}
-
 .search {
     margin-bottom: 45px;
 }
@@ -134,6 +102,57 @@ body {
     row-gap: 30px;
 }
 
+.content-main__list-item {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: calc((100% - 60px) / 3);
+    border-radius: 10px;
+    overflow: hidden;
+    text-decoration: none;
+}
+
+.content-main__list-item--img {
+    display: flex;
+    width: 100%;
+}
+
+.content-main__list-item--img img {
+    width: 100%;
+}
+
+.content-main__list-item--title {
+    margin-top: 12px;
+    margin-bottom: 5px;
+    font-size: 16px;
+    line-height: 19px;
+    color: #0A143A;
+}
+
+.content-main__list-item:hover .content-main__list-item--title {
+    color: #256EEB;
+}
+
+.content-main__list-item--price {
+    font-size: 16px;
+    line-height: 19px;
+    margin-bottom: 10px;
+    color: #0A143A;
+}
+
+.content-main__list-item--desc-box {
+    display: flex;
+    flex-direction: column;
+    row-gap: 4px
+    ;
+}
+
+.content-main__list-item--desc {
+    font-size: 14px;
+    line-height: 16px;
+    color: #C4C4C4;
+}
+
 .content-side__title {
     font-size: 18px;
     line-height: 21px;
@@ -150,6 +169,19 @@ body {
     border-bottom: 1px solid #E5E5E5;
     padding-bottom: 36px;
     margin-bottom: 36px;
+}
+
+.content-side__list-item {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.content-side__list-item--title {
+    margin-top: 7px;
+    margin-bottom: 5px;
+    font-size: 14px;
+    line-height: 16px;
 }
 
 .content-side__list-item--text {
@@ -208,6 +240,9 @@ body {
         max-width: 930px;
     }
 
+    .content-main__list-item {
+    width: calc((100% - 30px) / 2);
+    }
 }
 
 @media (max-width: 991px) {
@@ -249,14 +284,6 @@ body {
         max-width: 100%;
     }
 
-    .header-controls {
-        display: none;
-    }
-
-    .header-burger {
-        display: block;
-    }
-
     .search-btn .search-btn__text {
         display: none;
     }
@@ -264,3 +291,9 @@ body {
 
 }
 
+@media (max-width: 480px) {
+
+    .content-main__list-item {
+    width: 100%;
+    }
+}
